--- a/edu/templates/tag_study.html
+++ b/edu/templates/tag_study.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
-{% block content %}
-hello
 
-{% endblock %}
+{% block content %}
+    <img 
+        src ="https://i.namu.wiki/i/C9DgUkHfi6o7f1AWb529VHjHQeWtTFhVdFNc6YVScQzg4pARwRjBOWgidRveffl1j8ZqQbXQ40d64t1XVHL6Zw.svg"
+         width=" 100px"
+    />
+    <img src="/static/edu/image/profile.jpg"/>
+    <h2>렛츠코딩앤플레이</h2>
+    <button>프로필편집</button>
+    <p>
+        <strong>이도현</strong><br/>
+        학생
+    </p>
+    <p>
+        <a href= "https://www.google.co.kr/?hl=ko"
+            target="_blank"
+        >
+        구글</a>
+
+    게시물<br/>
+    팔로워<br/>
+    팔로우<br/>
+    </p>
+{% endblock content %}
