글 상세페이지 들어가기

--- a/edu/templates/tag_study.html
+++ b/edu/templates/tag_study.html
@@ -16,7 +16,8 @@
         <ul>
             {% for f in feed_list %}
                 <li>
-                {{ f.content }}
+                <a href="{% url 'edu:feed_detail' f.id %}"">{{ f.content }}</a>
+                <img src="/media/{{ f.photo }}"/>
                 </li>
             {% endfor %}
         </ul>
